--- a/specs/spring-boot-app.yml
+++ b/specs/spring-boot-app.yml
@@ -29,4 +29,4 @@ spec:
               configMapKeyRef:
                 name: hostname-config
                 key: postgres_host
-        image: <your Docker Hub account>/spring-boot-postgres-on-k8s:v1
+        image: vogetisameer12/spring-boot-postgres-on-k8s:latest
